--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -20,14 +20,14 @@
   overflow: hidden;
   position: relative;
   z-index: 1;
-  background-color: #B9B1BB;
-  padding-top: 50px;
-  padding-top: min(15vh, 50px);
+  background-color: #538c57;
+  padding-top: 79px;
+  padding-top: min(15vh, 79px);
   padding-left: 118px;
   padding-left: min(9.375vw, 118px);
 
   &-content {    
-    max-width: 560px;
+    max-width: 358px;
     display: flex;
     flex-direction: column;
   }
@@ -35,6 +35,9 @@
     margin-bottom: 53px;
     margin-left: auto;
     margin-right: auto;
+    img {
+      max-height: 65vh;
+    }
     &-mobile {
       visibility: hidden;
       display: none;
@@ -79,25 +82,25 @@
     }
   }
 
-  @media (min-width: 1921px) {
-    &-content {
-      max-width: 718px;
-    }   
-  }
+  // @media (min-width: 1921px) {
+  //   &-content {
+  //     max-width: 718px;
+  //   }   
+  // }
 
   @media (max-width: 1680px) and (min-aspect-ratio: 3/2) {
     padding-top: 10vh;
 
-    &-content {
-      max-width: 410px;
-    }   
+    // &-content {
+    //   max-width: 410px;
+    // }   
   }
   @media (max-width: 1440px) {
     // padding-left: 80px;
     padding-top: 4vh;
 
     &-content {
-      max-width: 400px;
+      max-width: 260px;
     }
     &-logo {
       margin-bottom: 40px;
@@ -110,7 +113,7 @@
     padding-top: 4vh;
 
     &-content {
-      max-width: 340px;
+      max-width: 200px;
     }
     &-logo {
       margin-bottom: 25px;
@@ -132,6 +135,7 @@
     }   
     &-bottles {
       right: -5%;
+      max-height: 80%;
     }
   }
 
@@ -450,8 +454,10 @@
   }
 
   &-arrow {
-    width: 30px;
-    height: 60px;
+    width: 72px;
+    height: 72px;
+    background-color: $primary;
+
     display: inline-block;
     vertical-align: middle;
     cursor: pointer;
@@ -467,12 +473,16 @@
   }
 
   &-prev {
-    background: url(../images/ArrowLeft.svg) center no-repeat;
-    background-size: contain;
+    background-image: url(../images/ArrowLeft.svg);
+    background-size: 32px 32px;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   &-next {
-    background: url(../images/ArrowRight.svg) center no-repeat;
-    background-size: contain;
+    background-image: url(../images/ArrowRight.svg);   
+    background-size: 32px 32px;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   &-previews {
@@ -643,13 +653,13 @@
 
   &-flex {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     min-height: 100%;
   }
 
   &-content {
-    padding-bottom: 130px;
+    padding-top: 152px;    
     padding-left: 30px;
     padding-right: 30px;
     @media (max-width: 1140px) {
@@ -670,6 +680,10 @@
 
   &-logo {
     margin-bottom: 46px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
     @media (max-width: 1140px) {
       margin-bottom: 32px;
     }
@@ -678,21 +692,23 @@
     }
 
     img {
-      width: 276px;
+      height: min(34vh, 337px);
+      width: auto;
+      // width: 260px;
       display: block;
       margin: 0 auto;
-      @media (max-width: 1680px) {
-        width: 220px;
-      }
-      @media (max-width: 1366px) {
-        width: 200px;
-      }
-      @media (max-width: 1140px) {
-        width: 150px;
-      }
-      @media (max-width: 768px) {
-        width: 100px;
-      }
+      // @media (max-width: 1680px) {
+      //   width: 220px;
+      // }
+      // @media (max-width: 1366px) {
+      //   width: 200px;
+      // }
+      // @media (max-width: 1140px) {
+      //   width: 150px;
+      // }
+      // @media (max-width: 768px) {
+      //   width: 100px;
+      // }
     }
   }
 
@@ -835,13 +851,16 @@
     &-content {
       padding-left: 20px;
       padding-right: 20px;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
     &-logo {
-      margin-bottom: 20px;
+      display: none;
+      // margin-bottom: 20px;
 
-      img {
-        width: 180px;
-      }
+      // img {
+      //   width: 180px;
+      // }
     }
     &-question {
       margin-bottom: 25px;
