--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -181,6 +181,18 @@ img {
 		// top: 50%;
 		transform: translate(0, 20%);
 		margin-left: 8px;
+		@media (max-width: 1140px) {
+			width: 18px;
+			height: 18px;
+		}
+		@media (max-width: 768px) {
+			width: 16px;
+			height: 16px;
+		}
+		@media (max-width: 599px) {
+			width: 20px;
+			height: 20px;
+		}
 	}
 
 	&:hover {
