--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -13,6 +13,7 @@
 }
 .inner,
 .container {
+  position: relative;
 	max-width: $inner;
 	padding-left: $gutter;
 	padding-right: $gutter;
@@ -36,6 +37,7 @@
   }
 
   @media (max-width: 599px) {
+    position: unset;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -191,12 +193,12 @@
 	display: -ms-inline-flexbox;
 	display: -ms-flexbox;	
 	display: flex;
-  -webkit-flex-flow: row wrap;
-	-ms-flex-flow: row wrap;
-	flex-flow: row wrap;
-	-webkit-flex-wrap: wrap;
-	-ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+  // -webkit-flex-flow: row wrap;
+	// -ms-flex-flow: row wrap;
+	// flex-flow: row wrap;
+	// -webkit-flex-wrap: wrap;
+	// -ms-flex-wrap: wrap;
+  // flex-wrap: wrap;
   margin-left: -$col_gutter;
   margin-right: -$col_gutter;
 
@@ -210,9 +212,9 @@
   padding-left: $col_gutter;
   padding-right: $col_gutter;
 }
-// .inner, .container {
-//   max-width: $inner+px;
-// }
+.inner, .container {
+  max-width: $inner+px;
+}
 
 @for $i from 1 through 12 {
   .col-#{$i} {
