--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -6,9 +6,9 @@
   overflow-y: auto;
   scroll-snap-type: y mandatory;
 
-  @media (max-width: 992px) {
-    max-height: calc(var(--vh, 1vh) * 100);
-  }
+  // @media (max-width: 992px) {
+  //   max-height: calc(var(--vh, 1vh) * 100);
+  // }
 }
 .screen {
   scroll-snap-align: start;
@@ -21,10 +21,10 @@
   position: relative;
   z-index: 1;
   background-color: #538c57;
-  padding-top: 79px;
-  padding-top: min(15vh, 79px);
-  padding-left: 118px;
-  padding-left: min(9.375vw, 118px);
+  // padding-top: 79px;
+  // padding-top: min(15vh, 79px);
+  // padding-left: 118px;
+  // padding-left: min(9.375vw, 118px);
 
   &-content {    
     max-width: 358px;
@@ -32,11 +32,20 @@
     flex-direction: column;
   }
   &-slogan {
-    margin-bottom: 53px;
-    margin-left: auto;
-    margin-right: auto;
+    // margin-bottom: 53px;
+    // margin-left: auto;
+    // margin-right: auto;
     img {
-      max-height: 65vh;
+      max-height: 56vh;
+      @media (max-width: 1180px) {
+        max-height: 46vh;
+      }
+      @media (max-width: 992px) {
+        max-height: 46vh;
+      }
+      @media (max-width: 599px) {
+        max-height: 30vh;
+      }
     }
     &-mobile {
       visibility: hidden;
@@ -50,6 +59,13 @@
   }
   &-btn {
     margin: 0 auto;
+    @media (max-width: 599px) {      
+      position: absolute;
+      bottom: 120px;
+      z-index: 3;
+      left: 50%;
+      transform: translate(-50%, 0);
+    }
   } 
 
   &-bg {
@@ -89,7 +105,7 @@
   // }
 
   @media (max-width: 1680px) and (min-aspect-ratio: 3/2) {
-    padding-top: 10vh;
+    // padding-top: 10vh;
 
     // &-content {
     //   max-width: 410px;
@@ -97,7 +113,7 @@
   }
   @media (max-width: 1440px) {
     // padding-left: 80px;
-    padding-top: 4vh;
+    // padding-top: 4vh;
 
     &-content {
       max-width: 260px;
@@ -110,7 +126,7 @@
 
   @media (max-width: 1180px) {
     // padding-left: 50px;
-    padding-top: 4vh;
+    // padding-top: 4vh;
 
     &-content {
       max-width: 200px;
@@ -124,14 +140,14 @@
   @media (max-width: 992px) {
     // padding-top: 8vh;
     padding-left: 40px;
-    min-height: 600px;
+    // min-height: 600px;
     height: calc(var(--vh, 1vh) * 100);
 
     &-content {
       max-width: 275px;
     }
     &-logo {
-      max-width: 100px;
+      max-width: 80px;
     }   
     &-bottles {
       right: -5%;
@@ -147,14 +163,14 @@
       right: -10%;
       max-width: 115%;
     }
-    &-slogan {
-      visibility: hidden;
-      display: none;
-      &-mobile {
-        visibility: visible;
-        display: block;
-      }
-    }   
+    // &-slogan {
+    //   visibility: hidden;
+    //   display: none;
+    //   &-mobile {
+    //     visibility: visible;
+    //     display: block;
+    //   }
+    // }   
   }
   @media (max-width: 599px) {
     padding-left: 30px;
@@ -171,17 +187,20 @@
       margin-top: 65vh;
     }
     &-slogan {
-      visibility: hidden;
-      display: none;  
+      // visibility: hidden;
+      // display: none;  
+      top: 15px;
+      right: 15px;
+      position: absolute;
+      height: 20vh;
+      z-index: 2;
       &-mobile {        
         visibility: visible;
         display: block;
         @include fz(42);
         line-height: 1.2;
         color: $font;
-        position: absolute;
-        top: 0;
-        right: 0;
+        position: absolute;  
         img {
           max-width: 46%;
           display: block;
@@ -1100,4 +1119,74 @@
       }
     }
   }
+}
+
+
+.screen-promo-slogan {
+  margin-bottom: 64px;
+  @media (max-width: 1180px) {
+    margin-bottom: 30px;
+  }
+}
+
+.screen-promo-left {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 80px 0px;
+  @media (max-width: 1600px) {
+    padding: 50px 0px;
+  }
+  @media (max-width: 1366px) {
+    padding: 40px 0px;
+  }
+  @media (max-width: 992px) {
+    padding: 30px 0px;
+  }
+}
+
+.screen-promo-bottle {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 60px 0px;
+  @media (max-width: 1600px) {
+    padding: 50px 0px;
+  }
+  @media (max-width: 1366px) {
+    padding: 40px 0px;
+  }
+  @media (max-width: 992px) {
+    padding: 30px 0px;
+  }
+  @media (max-width: 599px) {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    left: 0;
+    top: 50%;
+    transform: translate(0, -50%);
+  }
+}
+
+
+.screen-promo-bottle img {
+  max-height: calc(100vh - 120px);
+  @media (max-width: 1600px) {
+    max-height: calc(100vh - 100px);
+  }
+  @media (max-width: 1366px) {
+    max-height: calc(100vh - 80px);
+  }
+  @media (max-width: 992px) {
+    max-height: calc(100vh - 60px);
+  }
+}
+
+.screen-promo-logo {  
+  text-align: center;
 }
