--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -180,18 +180,19 @@ img {
 		// position: absolute;
 		// top: 50%;
 		transform: translate(0, 20%);
-		margin-left: 8px;
+		margin-right: 8px;
 		@media (max-width: 1140px) {
 			width: 18px;
 			height: 18px;
 		}
 		@media (max-width: 768px) {
-			width: 16px;
-			height: 16px;
+			width: 12px;
+			height: 12px;
+			margin-right: 5px;
 		}
 		@media (max-width: 599px) {
 			width: 20px;
-			height: 20px;
+			height: 20px;			
 		}
 	}
 
@@ -203,24 +204,24 @@ img {
 		transform: translate(0px, 2px);
 	}
 
-	@media (max-width: 1140px) {
+	@media (max-width: 1180px) {
 		@include fz(16);
 		height: 50px;
 		line-height: 50px;
-		padding: 0px 35px;
+		padding: 0px 33px;
 	}
 
 	@media (max-width: 768px) {
-		@include fz(14);
-		height: 40px;
-		line-height: 40px;
-		padding: 0px 35px;;
+		@include fz(12);
+		height: 35px;
+		line-height: 35px;
+		padding: 0px 20px;;
 	  }
 
 	@media (max-width: 599px) {
 		@include fz(20);
 		height: 64px;
 		line-height: 60px;
-		padding: 0px 60px;
+		padding: 0px 60px;		
 	}
 }
