--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -139,7 +139,7 @@
 
   @media (max-width: 992px) {
     // padding-top: 8vh;
-    padding-left: 40px;
+    // padding-left: 40px;
     // min-height: 600px;
     height: calc(var(--vh, 1vh) * 100);
 
