--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -52,16 +52,16 @@
       display: none;
     }
   }
-  &-logo {
-    position: absolute;
-    top: 0;
-    right: 7.633vw;
-  }
+  // &-logo {
+  //   position: absolute;
+  //   top: 0;
+  //   right: 7.633vw;
+  // }
   &-btn {
     margin: 0 auto;
-    @media (max-width: 599px) {      
+    @media (max-width: 768px) {      
       position: absolute;
-      bottom: 120px;
+      bottom: 40px;      
       z-index: 3;
       left: 50%;
       transform: translate(-50%, 0);
@@ -118,10 +118,10 @@
     &-content {
       max-width: 260px;
     }
-    &-logo {
-      margin-bottom: 40px;
-      max-width: 150px;
-    }  
+    // &-logo {
+    //   margin-bottom: 40px;
+    //   max-width: 150px;
+    // }  
   }
 
   @media (max-width: 1180px) {
@@ -131,10 +131,10 @@
     &-content {
       max-width: 200px;
     }
-    &-logo {
-      margin-bottom: 25px;
-      max-width: 120px;
-    }    
+    // &-logo {
+    //   margin-bottom: 25px;
+    //   max-width: 120px;
+    // }    
   }
 
   @media (max-width: 992px) {
@@ -146,9 +146,9 @@
     &-content {
       max-width: 275px;
     }
-    &-logo {
-      max-width: 80px;
-    }   
+    // &-logo {
+    //   max-width: 80px;
+    // }   
     &-bottles {
       right: -5%;
       max-height: 80%;
@@ -172,7 +172,7 @@
     //   }
     // }   
   }
-  @media (max-width: 599px) {
+  @media (max-width: 768px) {
     padding-left: 30px;
     padding-right: 30px;
 
@@ -1146,6 +1146,12 @@
   @media (max-width: 992px) {
     padding: 30px 0px;
   }
+  .screen-promo-btn {
+    @media (max-width: 768px) {
+      display: none;
+      visibility: hidden;
+    }
+  }
 }
 
 .screen-promo-bottle {
@@ -1164,7 +1170,7 @@
   @media (max-width: 992px) {
     padding: 30px 0px;
   }
-  @media (max-width: 599px) {
+  @media (max-width: 768px) {
     position: absolute;
     width: 100%;
     height: auto;
@@ -1172,6 +1178,19 @@
     top: 50%;
     transform: translate(0, -50%);
   }
+  .screen-promo-btn {
+    display: none;
+    visibility: hidden;
+    @media (max-width: 768px) {
+      display: block;
+      visibility: visible;
+    }
+  }
+}
+
+.screen-promo-imgs {
+  margin-left: -60px;
+  margin-right: -60px;
 }
 
 
