--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -211,14 +211,14 @@ img {
 		padding: 0px 33px;
 	}
 
-	@media (max-width: 768px) {
-		@include fz(12);
-		height: 35px;
-		line-height: 35px;
-		padding: 0px 20px;;
-	  }
+	// @media (max-width: 768px) {
+	// 	@include fz(12);
+	// 	height: 35px;
+	// 	line-height: 35px;
+	// 	padding: 0px 20px;;
+	//   }
 
-	@media (max-width: 599px) {
+	@media (max-width: 768px) {
 		@include fz(20);
 		height: 64px;
 		line-height: 60px;
