--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -21,10 +21,6 @@
   position: relative;
   z-index: 1;
   background-color: #538c57;
-  // padding-top: 79px;
-  // padding-top: min(15vh, 79px);
-  // padding-left: 118px;
-  // padding-left: min(9.375vw, 118px);
 
   &-content {    
     max-width: 358px;
@@ -173,8 +169,6 @@
     // }   
   }
   @media (max-width: 768px) {
-    padding-left: 30px;
-    padding-right: 30px;
 
     &-logo {
       display: none;
@@ -189,11 +183,11 @@
     &-slogan {
       // visibility: hidden;
       // display: none;  
-      top: 15px;
-      right: 15px;
+      top: 30px;
+      right: 30px;
       position: absolute;
-      height: 20vh;
       z-index: 2;
+
       &-mobile {        
         visibility: visible;
         display: block;
@@ -241,6 +235,8 @@
   &.mobile {
     visibility: hidden;
     display: none;
+    z-index: -1;
+
     @media (max-width: 599px) {
       visibility: visible;
       display: block;
@@ -675,14 +671,11 @@
     align-items: center;
     justify-content: center;
     min-height: 100%;
-  }
+    padding: 36vh 25px 10vh;
 
-  &-content {
-    padding-top: 152px;    
-    padding-left: 30px;
-    padding-right: 30px;
-    @media (max-width: 1140px) {
-      padding-bottom: 80px;
+    @media (max-width: 599px) {
+      padding-top: 175px;
+      padding-bottom: 50px;
     }
   }
 
@@ -703,31 +696,19 @@
     top: 0;
     left: 50%;
     transform: translate(-50%, 0);
-    @media (max-width: 1140px) {
-      margin-bottom: 32px;
-    }
-    @media (max-width: 768px) {
-      margin-bottom: 22px;
-    }
-
+  
     img {
-      height: min(34vh, 337px);
-      width: auto;
-      // width: 260px;
+      max-height: 33vh;
       display: block;
       margin: 0 auto;
-      // @media (max-width: 1680px) {
-      //   width: 220px;
-      // }
-      // @media (max-width: 1366px) {
-      //   width: 200px;
-      // }
-      // @media (max-width: 1140px) {
-      //   width: 150px;
-      // }
-      // @media (max-width: 768px) {
-      //   width: 100px;
-      // }
+    }
+
+    @media (max-width: 599px) {
+      width: 120px;
+
+      img {
+        max-height: none;
+      }
     }
   }
 
@@ -867,21 +848,6 @@
 
   @media (max-width: 599px) {
 
-    &-content {
-      padding-left: 20px;
-      padding-right: 20px;
-      padding-top: 130px;
-      padding-bottom: 20px;
-    }
-    &-logo {
-      // display: none;
-      margin-bottom: 20px;
-
-      img {
-        // width: 180px;
-        max-height: 120px;
-      }
-    }
     &-question {
       margin-bottom: 25px;
     }
@@ -1134,23 +1100,46 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
-  padding: 80px 0px;
+  padding: 30px 0px 80px;
+
   @media (max-width: 1600px) {
-    padding: 50px 0px;
+    padding: 20px 0px 60px;
   }
   @media (max-width: 1366px) {
-    padding: 40px 0px;
+    padding: 20px 0px 40px;
   }
   @media (max-width: 992px) {
-    padding: 30px 0px;
+    padding: 20px 0px 20px;
   }
+  @media (max-width: 992px) and (min-width: 768px) {
+    align-items: flex-start;
+  }
+
   .screen-promo-btn {
     @media (max-width: 768px) {
       display: none;
       visibility: hidden;
     }
+    @media (max-width: 992px) and (min-width: 768px) {
+      margin: 0;
+    }
+  }
+}
+.screen-promo-slogan {
+  @media (max-width: 992px) and (min-width: 768px) {
+    max-width: 80%;
+    margin-bottom: 20px;
+  }
+
+  @media (max-width: 768px) and (min-width: 599px) {
+    max-width: 25%;
+  }
+
+  @media (max-width: 599px) {
+    right: 20px;
+    top: 25px;
   }
 }
 
@@ -1161,6 +1150,7 @@
   justify-content: center;
   flex-direction: column;
   padding: 60px 0px;
+
   @media (max-width: 1600px) {
     padding: 50px 0px;
   }
@@ -1189,8 +1179,13 @@
 }
 
 .screen-promo-imgs {
-  margin-left: -60px;
-  margin-right: -60px;
+  // margin-left: -60px;
+  // margin-right: -60px;
+
+  @media (max-width: 1280px) and (min-width: 768px) {
+    margin-left: -60px;
+    margin-right: -60px;
+  }
 }
 
 
